Project

General

Profile

Actions

Bug #47904

closed

notifications not sent when non-owner modifies the bucket

Added by Yuval Lifshitz over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
notification
Backport:
octopus
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

how to reproduce:
  • create 2 users: user1 and user2, where user2 is an admin
  • create a topic by user1
  • create a bucket by user1
  • create notification for that bucket by user1
  • verify that when user1 put an object to the bucket, the notification is sent to the topic
  • verify that when user2 put an object to the bucket, the notification is sent to the topic - this is currently failing
in addition:
  • documentation should be clear on which users are allowed to create or modify notifications on buckets
  • documentation should be clear on relationship between the users that created topics to the users that creates the notifications that use them

Related issues 1 (0 open1 closed)

Copied to rgw - Backport #48461: octopus: notifications not sent when non-owner modifies the bucketResolvedYuval LifshitzActions
Actions #1

Updated by Yuval Lifshitz over 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 38136
Actions #2

Updated by Yuval Lifshitz over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48461: octopus: notifications not sent when non-owner modifies the bucket added
Actions #4

Updated by Loïc Dachary about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF